<resources>
    <string name="app_name">RecipesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>

    <string name="goto_sign_in">Sign in instead</string>
    <string name="goto_register">Register instead</string>

    <string name="sign_in_">Sign in</string>
    <string name="register_">Register</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_preferences">kuku</string>

    <string name="favourites">Favourites</string>
    <string name="add_recipe">Add Your Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="my_recipes">My Recipes</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="all_recipes">All Recipes</string>
    <string name="options">Options</string>
    <string name="making_time">Making Time:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="steps">Steps:</string>

    <string name="category">Category</string>
    <string name="recipe_name">Recipe\'s Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="hint_enter_name">Enter Name…</string>
    <string name="hint_time_in_minutes">Time in minutes…</string>
    <string name="search_recipe">Search Recipe By Ingredients</string>

    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="and">and</string>
    <string name="search_recipes">Find me recipes</string>
    <string name="selected_ingredients">Selected Ingredients</string>
    <string name="photo">Photo:</string>
    <string name="photos">Photos:</string>
    <string name="add_step">Add Step</string>

    <string name="sorry">Sorry</string>
    <string name="error_one_photo_only">You can\'t add more than one photo</string>
    <string name="greeting">Hi, %1$s!</string>
    <string name="user">User</string>


    <plurals name="numberMinutes">
        <item quantity="one">One minute</item>
        <item quantity="two">2 minutes</item>
        <item quantity="many">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <!--    -->
    <string name="sweets">Sweets</string>
    <string name="chicken">Chicken</string>
    <string name="meat">Meat</string>
    <string name="fish">Fish</string>
    <string name="vegan">Vegan</string>

    <!--  Ingredients  -->
    <string name="ml">ml</string>
    <string name="g">g</string>
    <string name="kg">kg</string>

    <string name="add_photo">Add Photo</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="enter_step">Enter Step</string>
    <string name="add_to_fav">Added To Favourites</string>
    <string name="removed_from_fav">Removed From Favourites</string>
    <string name="prompt_name">Name</string>
    <string name="hooray">Hooray!</string>
    <string name="msg_added_recipe">We added your Recipe!</string>
    <string name="oops">Oops! something went wrong</string>
    <string name="msg_cant_add_recipe">We couldn\'t add your Recipe…</string>


    <plurals name="numberSpoons">
        <item quantity="one">One spoon</item>
        <item quantity="many">%d spoons</item>
        <item quantity="other">%f spoons</item>
    </plurals>

    <plurals name="numberTeaspoons">
        <item quantity="one">One teaspoon</item>
        <item quantity="many">%d teaspoons</item>
        <item quantity="other">%f teaspoons</item>
    </plurals>

    <plurals name="numberCups">
        <item quantity="one">One cups</item>
        <item quantity="many">%d cups</item>
        <item quantity="other">%f cups</item>
    </plurals>


</resources>