<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            layout="@layout/appbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_goto_my_recipes"
                android:layout_width="260dp"
                android:layout_height="80dp"
                android:text="@string/my_recipes"
                android:textSize="20sp"
                app:cornerRadius="12dp"

                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="24dp"/>

            <Button
                android:id="@+id/btn_goto_new_recipe"
                android:layout_width="260dp"
                android:layout_height="80dp"
                android:text="@string/add_new_recipe"
                android:textSize="20sp"
                app:cornerRadius="12dp"
                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="24dp"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="260dp"
                android:layout_height="80dp"
                android:text="@string/logout"
                android:textSize="20sp"
                app:cornerRadius="12dp"
                android:backgroundTint="@android:color/holo_red_dark"
                />

        </LinearLayout>



    </LinearLayout>



</layout>