<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
<!--        <variable name="formData" type="com.recipesapp.recipesapp.utils.RecipeFormData" />-->
        <variable name="list" type="java.util.ArrayList&lt;String>" />
        <variable name="recipe" type="com.recipesapp.recipesapp.data.model.Recipe" />
        <variable name="name" type="String" />
        <variable name="canAddRecipe" type="boolean" />
        <variable name="imageUri" type="android.net.Uri" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            app:name="@{name}"
            layout="@layout/appbar" />

        <ScrollView
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FEF1D8"
            android:paddingBottom="48dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                >


                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="36dp"
                    android:layout_below="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:gravity="center"
                            android:text="@string/recipe_name"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                        </TextView>

                        <Space
                            android:layout_width="6dp"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:id="@+id/et_name"
                            android:hint="@string/hint_enter_name"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content">
                        </EditText>

                    </LinearLayout>


                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:text="@string/making_time"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content">
                        </TextView>
                        <Space
                            android:layout_width="6dp"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/et_time"
                            android:hint="@string/hint_time_in_minutes"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content">
                        </EditText>

                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp"/>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <TextView
                            android:text="@string/category"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content">
                        </TextView>

                        <Space
                            android:layout_width="6dp"
                            android:layout_height="wrap_content"/>

                        <Spinner
                            android:spinnerMode="dialog"
                            android:id="@+id/spinnerCategory"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            app:items="@{@stringArray/categories}"
                            app:itemLayout="@{@layout/my_spinner_item_layout}"
                            app:dropDownLayout="@{@layout/my_spinner_item_dropdown_layout}"

                            tools:listitem="@layout/my_spinner_item_layout"
                            />



                    </LinearLayout>


                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/ingredients"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content">
                        </TextView>

                        <Button
                            android:id="@+id/btn_add_ingredient"
                            android:text="@string/add_ingredient"
                            android:textColor="#fff"
                            android:layout_width="130dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_add_white"
                            android:drawableStart="@drawable/ic_add_white">
                        </Button>

                    </LinearLayout>



                    <ListView
                        android:visibility="visible"
                        android:id="@+id/list_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        items="@{recipe.getIngredientsStrings(context)}"
                        tools:itemCount="4"
                        tools:listitem="@layout/list_edit_item_content"

                        />


                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="4dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/steps"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content">
                        </TextView>

                        <Button
                            android:id="@+id/btn_add_step"
                            android:text="@string/add_step"
                            android:textColor="#fff"
                            android:layout_width="130dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_add_white"
                            android:drawableStart="@drawable/ic_add_white">
                        </Button>

                    </LinearLayout>

                    <ListView
                        android:id="@+id/list_steps"
                        android:layout_width="match_parent"
                        tools:listitem="@layout/list_edit_item_content"
                        android:layout_height="150dp"
                        items="@{recipe.steps}"
                        />


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/photo"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content">
                        </TextView>

                        <Button
                            android:id="@+id/btn_add_photo"
                            android:text="@string/add_photo"
                            android:textColor="#fff"
                            android:layout_width="130dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_add_white"
                            android:drawableStart="@drawable/ic_add_white">
                        </Button>

                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="6dp"/>


<!--                    <ListView-->
<!--                        android:id="@+id/list_photos"-->
<!--                        android:layout_width="match_parent"-->
<!--                        tools:listitem="@layout/list_photo_item"-->
<!--                        android:layout_height="200dp"-->
<!--                        items="@{recipe.photos}"-->
<!--                        />-->

                    <RelativeLayout
                        android:visibility="@{imageUri == null ? View.GONE : View.VISIBLE}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        >

                        <ImageView
                            android:layout_width="260dp"
                            android:layout_height="200dp"
                            imageSrc="@{imageUri}"
                            />

                        <ImageButton
                            android:id="@+id/btn_remove_image"
                            android:src="@drawable/ic_delete"
                            android:layout_width="40dp"
                            android:layout_height="40dp"/>

                    </RelativeLayout>


                </LinearLayout>






            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnAddRecipe"
            android:text="@string/add_recipe"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-6dp"
            android:layout_gravity="center"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp"

            android:layout_height="56dp"
            android:enabled="@{canAddRecipe}"
            >
        </Button>


<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="-100dp"-->
<!--            android:scaleX="1.7"-->
<!--            android:scaleY="0.9"-->
<!--            android:rotation="12"-->
<!--            android:alpha="0.2"-->
<!--            android:background="@drawable/bg_recipe"-->
<!--            />-->
    </RelativeLayout>
</layout>

