<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.recipesapp.recipesapp.utils.StringUtils"/>
<!--        <variable name="ingredient" type="com.recipesapp.recipesapp.data.model.Ingredient" />-->
        <variable name="title" type="String" />

        <variable name="name" type="String" />
        <variable name="quantity" type="int" />
        <variable name="type" type="int" />
    </data>

    <FrameLayout
        android:layout_width="360dp"
        android:layout_height="320dp"
        android:padding="20dp"
        tools:context=".views.fragments.dialogs.DialogFragment">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/add_ingredient"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:gravity="center"
                android:text="@string/ingredient_name"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="90dp"
                android:layout_height="wrap_content">
            </TextView>


            <EditText
                android:id="@+id/edit_text_data"
                android:text="@{name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

            <TextView
                android:gravity="start"
                android:text="@string/quantity"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="90dp"
                android:layout_height="wrap_content">
            </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageButton
                    android:id="@+id/btn_add_quantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_add_circle"
                    android:background="@android:color/transparent"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(quantity)}"
                    android:layout_height="match_parent">

                </TextView>


                <ImageButton
                    android:layout_width="50dp"
                    android:id="@+id/btn_substruct_quantity"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_remove_circle"
                    android:background="@android:color/transparent"
                    />

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    app:items="@{StringUtils.getIngredientsTypesName(context)}"
                    app:itemLayout="@{@layout/my_spinner_item_layout}"
                    app:dropDownLayout="@{@layout/my_spinner_item_dropdown_layout}"
                    app:startPosition="@{type}"
                    tools:listitem="@layout/my_spinner_item_layout"

                    />




            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="12dp"/>

            <Button
                android:id="@+id/btn_add"
                android:text="@string/add"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </FrameLayout>
</layout>